--- a/redthread/redthreadstyles.css
+++ b/redthread/redthreadstyles.css
@@ -2,8 +2,8 @@
 body{
 	color:#ffffff;
 	font-family: "century gothic";
- 	background-color: #323232;
-
+ 	background-color: #f8f8f8;
+    overflow-x: hidden;
 }
 .navbar-own {
 		border-bottom: 0.25px solid;
@@ -116,9 +116,10 @@ ul.topnav li.right {float: right;}
 
  .big_canvas {
 
-	background-image:url('assets/logo/canvas.png'); 
+	background-image:url('assets/logo/canvas.png') ;
+
 	width:100% ;
-	height: 650px;
+	height: 680px;
 }
 
 .latest-interview-label {
@@ -152,13 +153,10 @@ ul.topnav li.right {float: right;}
 
 
 .interview-link, .interview-link:hover {
-	color: #000000; 
+	color: #ffffff; 
 	text-decoration: none;
 }
-/*-----------main interviewe frame---------------*/
-.main-interview-frame {
-	background-color: #ffffff;
-}
+
 
 .interview-desgination {
 	margin-top:2px;
@@ -167,10 +165,10 @@ ul.topnav li.right {float: right;}
 .interview-btn {  
   border-style: solid;
   border-width: 1px;
-  border-color: #ffffff;
-  background-color: #ffffff;
+  border-color: #e12227;
+  background-color: #e12227;
   font-size: 15px;
-  font-color: #344567;
+  font-color: #ffffff;
   font-weight: 500px;
   text-align: center;
   margin-top:30px;
@@ -178,6 +176,19 @@ ul.topnav li.right {float: right;}
   width:160px;
   height:50px;
 }
+
+
+
+/*-----------main interviewe frame---------------*/
+.main-interview-frame {
+	background-color: #f8f8f8;
+}
+
+.main-video {
+	margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 
 
 
@@ -221,9 +232,19 @@ ul.topnav li.right {float: right;}
 	color:#999;
 }
 
+.img_about_us_1 {opacity:0.4;}
+.img_about_us_2 {opacity:0.8; }
+.img_about_us_3 {opacity:}
+
+.img_about_us_4 {opacity:}
+.img_about_us_5 {opacity:}
+.img_about_us_6 {opacity:}
+.img_about_us_7 {opacity:}
+.img_about_us_8 {opacity:}
+.img_about_us_9 {opacity:}
 /* --=======================REDTHREAD initiative ==================--*/
 .tranparent_layer {
-  background-color:rgba(1,0,0,.7);
+  background-color:rgba(1,0,0,.8);
  
 }
 
@@ -239,23 +260,31 @@ ul.topnav li.right {float: right;}
 	width:100%;
 	
 	background-image:url('assets/logo/redthread-initiatve.png');
+	background-repeat:  no-repeat;
 }
 
 
 
 .four-hundred {
- font-family: "century gothic";
- font-size: 60px;
-line-height: 120px;
+	display: inline-block;
+	position: relative;
+    font-family: "century gothic";
+   
+    font-size: 60px;
+    line-height: 120px;
 }
 
 
 .design_firms {
+	display: inline-block;
 	font-family: "century gothic";
 	font-size: 30px;
 	line-height: 38px;
 	margin-top:40px;
+	
 }
+
+
 
 /* ---==============contact us ====================--*/
 	
@@ -263,17 +292,18 @@ line-height: 120px;
 	background-color: #f8f8f8;
 	color: #333;
 	width: 100%;
-	height: 630px;
+	height: 400px;
 	line-height: 38px;
 	font-size:36px;
 }
 .sentence {
 	position:relative;
-	
+	color:#999;
 	line-height: 60px;
 	font-family: "century gothic";
 	font-size: 42px;
-	padding-top:10px; 
+	margin-top:-15px;
+
 
 
 }
@@ -282,14 +312,21 @@ line-height: 120px;
 .social_connect {
 
 	
-	
 	position:relative;
 	line-height: 80px;
 	font-family: "century gothic";
 	font-size: 36px;
+	margin-top: -10px;
 
 }
 
+.contact_word {
+	font-family: "century gothic";
+   font-weight: 10;
+   font-size:40px;
+	margin-top: -50px;
+	color:#333333;
+}
 
 .jumbotron {
    
@@ -302,6 +339,11 @@ line-height: 120px;
 /* ======footer ==============*/
 
 .footer{
+	background-color:#323232;
+	height: 50px;
+	margin-bottom: 0;
+	padding-left: 47px;
+	padding-top: 18px;	
 }
 
 
