--- a/redthread/redthreadstyles.css
+++ b/redthread/redthreadstyles.css
@@ -4,75 +4,32 @@ body{
 	font-family: "century gothic";
  	background-color: #f8f8f8;
     overflow-x: hidden;
-    font-size:16px;
+    font-size:14px;
    
 }
 
 h1,h2,h3,h4,h5,h6 {
 	font-family: "century gothic";
+	color:#333333;
+	font-weight: normal;
 	
 }
 
 h1 {
-	display: block;
-    font-size: 2em;
-    margin-top: 0.67em;
-    margin-bottom: 0.67em;
-    margin-left: 0;
-    margin-right: 0;
-    
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
+
+
 
 h2 {
-    display: block;
-    font-size: 1.5em;
-    margin-top: 0.83em;
-    margin-bottom: 0.83em;
-    margin-left: 0;
-    margin-right: 0;
-    
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
 
-h3 { 
-    display: block;
-    font-size: 1.17em;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    margin-left: 0;
-    margin-right: 0;
-    
+h3 {
+	margin:1em;
 }
-
-h4 { 
-    display: block;
-     font-size: 1.12em;
-    margin-top: 0.6em;
-    margin-bottom: 0.3em;
-    margin-left: 0;
-    margin-right: 0;
-    
-}
-
-h5 { 
-    display: block;
-    font-size: .83em;
-    margin-top: 1.67em;
-    margin-bottom: 1.67em;
-    margin-left: 0;
-    margin-right: 0;
-    
-}
-
-h6 { 
-    display: block;
-    font-size: .67em;
-    margin-top: 2.33em;
-    margin-bottom: 2.33em;
-    margin-left: 0;
-    margin-right: 0;
-    
-}
-
 
 
 
@@ -80,15 +37,37 @@ h6 {
 
 /*=====================below 300px=========================*/
 @media screen and (max-width:300px) {
+
+
+   h1 {
+	    	font-size: 24px;
+	  }
+
+    h2 {
+
+	    font-size: 14px;
+    } 
+
+    h3 {
+	font-size: 12px;
+   }
+
+
+   	.featured {left:10%; top:50%;}
+    .featured .f1 {display:block;  font-size:24px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
+    .featured .f2 {display:block; font-size:14px ;  color: #ffffff;}
+    .featured h3 {font-size:12px ;}
+    .featured a div {margin-top: 1.2em;}
+
+	
+
 	.logo { 
 		width:200px;
 		 height:20px; 
-		 margin:5% 5%; 
+		 top:30px;
+		 left:-10px;
+		
 	
-   }
-
-   .toggle-button {
-      float:right;
    }
 
 
@@ -98,21 +77,44 @@ h6 {
    }
 
 
+
+
 }
 
 /*=====================at 300px=========================*/
 @media screen and (min-width:301px) {
+
+
+
+   h1 {
+	    	font-size: 24px;
+	  }
+
+    h2 {
+
+	    font-size: 14px;
+    } 
+
+    h3 {
+	font-size: 12px;
+   }
+
+
+   	.featured {left:10%; top:50%;}
+    .featured .f1 {display:block;  font-size:24px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
+    .featured .f2 {display:block; font-size:14px ;  color: #ffffff;}
+    .featured h3 {font-size:12px ;}
+    .featured a div {margin-top: 1.2em;}
+
+ 	
 	.logo { 
 		width:200px;
 		 height:20px; 
-		 margin:5% 5%; 
+		
 	
    }
 
-   .toggle-button {
-   		float:right;
-   		 margin-top: 20%;
-   }
+  
 
    .playlist {
    		width:100%;
@@ -122,18 +124,39 @@ h6 {
 
 /*=====================at 400px=========================*/
 @media screen and (min-width:401px) {
+	
+
+
+   h1 {
+	    	font-size: 24px;
+	  }
+
+    h2 {
+
+	    font-size: 14px;
+    } 
+
+    h3 {
+	font-size: 12px;
+   }
+
+
+   	.featured {left:10%; top:50%;}
+    .featured .f1 {display:block;  font-size:24px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
+    .featured .f2 {display:block; font-size:14px ;  color: #ffffff;}
+    .featured h3 {font-size:12px ;}
+    .featured a div {margin-top: 1.2em;}
+
+
+
 	.logo { 
-		width:250px;
-		 height:25px; 
-		 margin:5% 5%; 
+		width:200px;
+		 height:20px; 
+		
 	
    }
 
-   .toggle-button {
-   	   float:right;
-   
-   }
-
+  
 
    .playlist {
    		width:100%;
@@ -145,17 +168,14 @@ h6 {
 /*=====================at 500px=========================*/
 @media screen and (min-width:500px) {
 	.logo { 
-		width:300px;
-		 height:30px; 
-		 margin:5% 5%; 
+		width:200px;
+		 height:20px; 
+		
 	
    }
-
-   .toggle-button {
-     float:right;
-   	   margin-top: 50%;
-   }
-
+ 
+     
+    .featured {left:10%; top:50%;}
 
    .playlist {
    		width:100%;
@@ -165,18 +185,35 @@ h6 {
 
 /*=====================at 600px=========================*/
 @media screen and (min-width:600px) {
+
+
+
+   h1 {
+	    	font-size: 36px;
+	  }
+
+    h2 {
+
+	    font-size: 16px;
+    } 
+
+    h3 {
+	font-size: 14px;
+   }
+
+   	.featured {left:10%; top:50%;}
+    .featured .f1 {display:block;  font-size:36px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
+    .featured .f2 {display:block; font-size:16px ;  color: #ffffff;}
+    .featured h3 {font-size:12px ;}
+    .featured a div {margin-top: 1.2em;}
+
+
+
+
 	.logo { 
-		width:400px;
-		 height:40px; 
-		 margin:5% 5%; 
-	
+		width:200px;
+		height:20px; 
    }
-
-   .toggle-button {
-   	float:right;
-   	   margin-top: 90%;
-   }
-
 
    .playlist {
    		width:48%;
@@ -185,10 +222,35 @@ h6 {
 
 /*=====================at 800px=========================*/
 @media screen and (min-width:800px) {
+
+
+
+   h1 {
+	    	font-size: 50px;
+	    	
+	  }
+
+    h2 {
+
+	    font-size: 18px;
+	   
+    } 
+
+    h3 {
+	font-size: 14px;
+   }
+
+
+     .featured {left:10%; top:60%;}
+    .featured .f1 {display:block;  font-size:50px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
+    .featured .f2 {display:block; font-size:18px ;   color: #ffffff;}
+    .featured h3 {font-size:14px ;}
+    .featured a div {margin-top: 1.2em;}
+
 	.logo { 
 		width:400px;
 		 height:40px; 
-		 margin:1% 1%;
+		 margin:1% 0%;
 	
    }
 
@@ -237,16 +299,7 @@ h6 {
 
 
 }
-.toggle-button {
-	
-	border:none;
-	padding-bottom:10px;
-	background: none;
-	
-	display:absolute;
-	
-	
-}
+
 
  
 
@@ -304,56 +357,18 @@ ul.topnav li.right {float: right;}
 
 /*----------- navbar begins -----------------*/
 
-.dropdown {
-    position: relative;
-    float: right;
-    top:10px;
-    margin-right: 15px;
-    display: block;
-     text-decoration: none;
-    
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-     text-decoration: none;
-    min-width: 100px;
-    
-    
-}
-.dropdown-content  li a {
-     text-decoration: none;
-}
+  .navbar-small {  height:80px; width:100%; background-color:none;  }
+ 
+  .navbar-small ul li { list-style:none; display:inline-block;}
+  .navbar-small ul li:first-child { float:left; margin-left:-20px; margin-top:30px;}
+  .navbar-small ul li:last-child {  float:right; margin-right:20px; margin-top:30px;}
+  .navbar-small ul li img {display: inline-block;}
 
 
-.dropdown-content ul li a {
-    color:#f8f8f8;
-    font-family:"century gothic";
-    background-color:none;
-    padding: 12px 16px;
-    text-decoration: none;
-    display:inline-block;
-   
-
-}
-
-.dropdown-content li a.active {background-color: red;}
-
-
-
-.dropdown:hover 
-    .dropdown-content {
-    display:block;
-    position: absolute;
-}
-
-
-div.dropdown:hover .toggle-button{
-    background-color: #3e8e41;
-
-}
-
+   .dropdown-content { display:block; position:absolute; visibility:hidden;  }
+   .dropdown {display:inline-block;}
+   .dropdown:hover .dropdown-content {padding:1em;  position: absolute;right:10px; background-color:rgba(255,255,255,0.5); visibility:visible; }
+ 
 
 /*------------------*/
 
@@ -362,16 +377,15 @@ div.dropdown:hover .toggle-button{
 	text-decoration: none;
 	text-decoration: none;
 }
-.navbar-about-btn {
+.navbar-about-btn h3 {
 	display:inline-block;
 
   border-style: solid;
   border-width: 1px;
+  color:#ffffff;
+  padding:1.2em;
+  margin: 10px;
   
-  padding-top:13px;
-  margin-top: 10px;
-  width:100px;
-  height:50px;
   
   border-color: #ffffff;
   font-color: #ffffff;
@@ -411,20 +425,15 @@ div.dropdown:hover .toggle-button{
 
 
 .sub_heading {
-   font-family: "century gothic";
-   font-weight: 10;
-  
-   margin-top: 20px; 
-   padding: 30px;
-   color:#333333;
+   
 }
 
 
 /*----------------big_canvas begins-------------------- */
 .featured {
 	position:absolute;
-	left:5%;
-	bottom:5%;
+	left:8%;
+	bottom:15%;
 
 	
 }
@@ -446,49 +455,19 @@ div.dropdown:hover .toggle-button{
 	height: 100%;
 }
 
-.latest-interview-label {
-	
-	padding-bottom:0px;
-	margin-bottom: 0px;
-
-}
-
-.interview-name {
-	
-	font-weight: 100;
-	font-family:"century gothic";
-	
-}
-
-.name-light {
-	font-family:"century gothic";
-	font-weight: lighter;
-}
-
-.interview-designation {	
-	padding-top:0px;
-	margin-top: 0px;
-}
-
-
 .interview-link, .interview-link:hover {
 	color: #ffffff; 
 	text-decoration: none;
 }
 
 
-.interview-desgination {
-	margin-top:2px;
-}
-
 .interview-btn {  
  
-  border-radius: 20px;
-  
-  background-color: rgba(225,34,39,0.5) ;
-  
+  background-color: rgba(255,255,255,0.5) ;
+  display: inline-block;
   font-color: #ffffff;
-  padding:.7em;
+  
+  margin-top:0.3em;
 }
 
 
@@ -511,7 +490,6 @@ div.dropdown:hover .toggle-button{
 
 .playlist_container {
 	position:relative;
-	padding-left:10px;
  	color: #000000;
     background-color: #ffffff;   
     width:100%;
@@ -533,14 +511,6 @@ div.dropdown:hover .toggle-button{
 }
 
 
-
-.video-title {
-	font-family: "century gothic";
-	
-	position:relative;
-	color:#333333;
-	padding-bottom: 15px;
-}
 
 
 .video-excerpt {
@@ -582,11 +552,14 @@ div.dropdown:hover .toggle-button{
    }
 
 .redthread-facts {
-	
-	
 	background-image:url('assets/logo/redthread-initiatve.png');
 	background-repeat:  no-repeat;
 }
+
+.redthread-facts h1 { color:#ffffff; }
+.redthread-facts h2 { color:#ffffff; }
+.redthread-facts h3 { color:#ffffff; }
+
 
 
 
