--- a/redthread/redthreadstyles.css
+++ b/redthread/redthreadstyles.css
@@ -5,6 +5,7 @@ body{
  	background-color: #f8f8f8;
     overflow-x: hidden;
     font-size:14px;
+    margin:0;
    
 }
 
@@ -37,7 +38,7 @@ h3 {
 
 .container {
 	padding-bottom:30px; 
-	border:2px solid red;
+	
 }
 
 
@@ -65,7 +66,7 @@ h3 {
 
    }
 
-   	.featured {left:10%; top:50%;}
+   	.featured { margin-top: 50%; margin-left: 22px;}
     .featured .f1 {display:block; font-weight: bold;  font-size:24px ; line-height: 30px; margin-left: -3px; color: #ffffff; font-weight:600;  }
     .featured .f2 { letter-spacing: 0.3px; display:block; font-size:14px ;  color: #ffffff; }
     .featured h3 {font-size:12px ; font-weight: 600;}
@@ -113,7 +114,7 @@ h3 {
 
    }
 
-   	.featured {left:10%; top:50%;}
+   	.featured { margin-top: 50%; margin-left: 22px; }
     .featured .f1 {display:block; font-weight: bold;  font-size:24px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
     .featured .f2 { letter-spacing: 0.3px; display:block; font-size:14px ;  color: #ffffff;}
     .featured h3 {font-size:12px ; font-weight: 600;}
@@ -157,7 +158,7 @@ h3 {
    }
 
 
-   	.featured {left:10%; top:50%;}
+   	
     .featured .f1 {display:block; font-weight: bold;  font-size:24px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
     .featured .f2 { letter-spacing: 0.3px; display:block; font-size:14px ;  color: #ffffff;}
     .featured h3 {font-size:12px ; font-weight: 600;}
@@ -190,7 +191,7 @@ h3 {
    }
  
      
-    .featured {left:10%; top:50%;}
+    
 
    
 }
@@ -213,7 +214,7 @@ h3 {
 	font-size: 14px;
    }
 
-   	.featured {left:10%; top:50%;}
+   	.featured { margin-top: 40%; }
     .featured .f1 {display:block; font-weight: bold;  font-size:36px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
     .featured .f2 { letter-spacing: 0.3px; display:block; font-size:16px ;  color: #ffffff;}
     .featured h3 {font-size:12px ; font-weight: 600;}
@@ -227,16 +228,34 @@ h3 {
 		height:20px; 
    }
    
+    .big_canvas {
+   	background-position: initial;
 
+   }
 
 	.design_firms {
 		font-size:16px ; 
 		color: #ffffff;
 	}
-  
+   
+
+    
 
 
 }
+
+/*=====================at 768px=========================*/
+@media screen and (min-width:768px) {
+
+	.contact_us .container {
+		padding-top: 40px;
+		padding-top: 40px;
+	}
+
+
+}
+
+
 
 /*=====================at 800px=========================*/
 @media screen and (min-width:800px) {
@@ -258,16 +277,17 @@ h3 {
 	font-size: 14px;
    }
 
+   
 
-     .featured {left:10%; top:60%;}
+	.featured { margin-top: 30%; margin-left: 0px;}     
     .featured .f1 {display:block; font-weight: bold;  font-size:50px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
     .featured .f2 { letter-spacing: 0.3px; display:block; font-size:18px ;    color: #ffffff;}
     .featured h3 {font-size:14px ; font-weight: 600;}
     .featured a div {margin-top: 1.2em;}
 
 	.logo { 
-		width:400px;
-		 height:40px; 
+		width:300px;
+		 height:30px; 
 		 margin:1.6% 0%;
 	
    }
@@ -280,6 +300,18 @@ h3 {
 	}
 
 
+	.contact_us h1 {
+		font-size: 36px;
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
+
+	
+
+	.social_connect h1 {
+		padding-top:20px;
+		padding-bottom: 2px;
+	}
    
   
 }
@@ -289,111 +321,78 @@ h3 {
 
 
 /*===========================MEDIA QUERIES ENDS=======================*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-.navbar-own {
-		border-bottom: 0.25px solid;
-		border-color: rgba(255,255,255,0.2);
-		height: 100px;
-       
-}
-
-@media screen and (max-width:600px)
-{
-	.navbar-own {
-		border:none;
-	}
-
-	div.navbar-about-btn {
-		display:none;
-	}
-	
-
-
-}
-
-
- 
-
 ul.topnav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: transparent;
-}
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: none;
+  position:absolute;
+  width:100%;
+  color:red;
+  border-bottom: 1px solid #ffffff;
+  }
 
-ul.topnav li {float: left; }
+ul.topnav li:first-child {float: left;}
+ul.topnav li {float: right; }
+
+ul.topnav li a h3 { color:#ffffff; font-weight: bold;  }
 
 ul.topnav li a {
+  display: inline-block;
+  color: #ffffff;
+  text-align: center;
+  margin: 14px 10px;
+  text-decoration: none;
+  transition: 3 s;
+  padding:1em;
+ 
+}
+
+
+
+ul.topnav li a:hover {background-color: #555;}
+
+ul.topnav li.icon {display: none;}
+
+@media screen and (max-width:800px) {
+  ul.topnav li:not(:first-child) {display: none;}
+  ul.topnav li.icon {
+    float: right;
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width:800px) {
+  ul.topnav.responsive {position: relative;}
+  ul.topnav.responsive li.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  ul.topnav.responsive {position:absolute;}
+  ul.topnav.responsive li {
+    float: none;
     display: block;
-    color: white;
-    text-align: center;
-    padding: 15px 30px 0px 50px;
-    text-decoration: none;
-    background-color: none;
-}
-
-
-
-
-ul.topnav li a:hover:not(.active) {background-color: none;}
-
-ul.topnav li a.active {background-color: #4CAF50;}
-
-ul.topnav li.right {float: right;  margin-left: -50px;}
-
-
-
-@media screen and (max-width: 800px){
-  
-    .navbar-own {
-    	display:none;
-    }
-
-  
-
-}
-
-
-
-@media screen and (min-width: 801px){
     
-    .navbar-small{
-    	display:none;
-    }
+  }
+  ul.topnav.responsive li a {
+    display: block;
+    text-align: left;
 
    
-
+  }
 }
 
-/*----------- navbar begins -----------------*/
-
-  .navbar-small {  height:80px; width:100%; background-color:none; border-bottom: 1px solid white;  }
- 
-  .navbar-small ul li { list-style:none; display:inline-block;}
-  .navbar-small ul li:first-child { float:left; margin-left:-20px; margin-top:30px;}
-  .navbar-small ul li:last-child {  float:right; margin-right:50px; margin-top:30px;}
-  .navbar-small ul li img {display: inline-block;}
 
 
-   .dropdown-content { display:block; position:absolute; visibility:hidden;  }
-   .dropdown {display:inline-block;}
-   .dropdown:hover .dropdown-content {padding:1em;  position: absolute; right:50px; background-color:rgba(255,255,255,0.5); visibility:visible; }
- 
 
-/*------------------*/
+
+
+
+
+
 
   
  
@@ -421,7 +420,7 @@ ul.topnav li.right {float: right;  margin-left: -50px;}
 
 
 .logo {
-	position:absolute;
+	
 	
 }
 
@@ -435,22 +434,11 @@ ul.topnav li.right {float: right;  margin-left: -50px;}
 /* ---------------navbar ends------------------------- */
 
 
-/*--------------------col-lg-4---------------*/
-.col-lg-4 {
-	
-	
-}
-
-/*--------------------col-lg-4---------------*/
-
 
 /*----------------big_canvas begins-------------------- */
 .featured {
 	position:relative;
-	margin-top:60%;
-	
-	
-
+	display: inline-block;
 	
 }
 
@@ -624,6 +612,9 @@ ul.topnav li.right {float: right;  margin-left: -50px;}
 
 }
 
+.social_connect h1 {
+	margin-bottom: 5px;
+}
 
 
 /* ======footer ==============*/
