--- a/redthread/redthreadstyles.css
+++ b/redthread/redthreadstyles.css
@@ -88,7 +88,18 @@ h3 {
 	}
    
  
-.contact_us span { display: block; }
+    .contact_us span { display: block; }
+
+
+    .copyright {
+	   display:inline-block;
+	   text-align: center;
+    }
+
+    .follow {
+	   display:inline-block;
+	   text-align:center;
+    }
    
 }
 
@@ -136,6 +147,18 @@ h3 {
 
   
 .contact_us span { display: block; }
+
+
+     .copyright {
+	   display:inline-block;
+	   text-align: center;
+    }
+
+    .follow {
+	   display:inline-block;
+	    text-align: center;
+    }
+
     
 
    
@@ -220,7 +243,7 @@ h3 {
    	.featured { margin-top: 40%; }
     .featured .f1 {display:block; font-weight: bold;  font-size:36px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
     .featured .f2 { letter-spacing: 0.3px; display:block; font-size:16px ;  color: #ffffff;}
-    .featured h3 {font-size:12px ; font-weight: 600;}
+    .featured h3 {font-size:12px ;  font-weight: bold;letter-spacing:1px;}
     .featured a div {margin-top: 1.2em;}
 
 
@@ -281,7 +304,7 @@ h3 {
 	.featured { margin-top: 38%; margin-left: 0px;}     
     .featured .f1 {display:block; font-weight: bold;  font-size:50px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
     .featured .f2 { letter-spacing: 0.3px; display:block; font-size:18px ;    color: #ffffff;}
-    .featured h3 {font-size:14px ; font-weight: 600;}
+    .featured h3 {font-size:14px ; font-weight: bold;letter-spacing:1px; }
     .featured a div {margin-top: 1.2em;}
 
 	.logo { 
@@ -292,9 +315,10 @@ h3 {
    }
    
    .playlist_container h2 {
-		font-size: 14px;	
+		font-size: 16px;	
 
 }
+
 
 
 	.design_firms {
@@ -309,12 +333,23 @@ h3 {
 	}
 
 	
-.contact_us span { display: inline; }
+    .contact_us span { display: inline; }
 
 	.social_connect h1 {
 		padding-top:20px;
 		padding-bottom: 2px;
 	}
+
+	 .copyright {
+	   display:inline-block;
+	   float:left;
+    }
+
+    .follow {
+	   display:inline-block;
+	   float:right;
+    }
+   
   
 }
 
@@ -332,6 +367,7 @@ ul.topnav {
   position:absolute;
   width:100%;
   color:red;
+  border:1px solid blue;
  
   }
 
@@ -344,10 +380,11 @@ ul.topnav li a {
   display: inline-block;
   color: #ffffff;
   text-align: center;
-  margin: 14px 10px;
+  margin: ;
   text-decoration: none;
   transition: 3 s;
-  padding:1em;
+  padding:.5em;
+ 
  
 }
 
@@ -357,6 +394,13 @@ ul.topnav li a:hover {}
 
 ul.topnav li.icon {display: none;}
 
+
+ul .container {
+	padding-bottom: 0px;
+	
+}
+
+
 @media screen and (max-width:800px) {
   ul.topnav li:not(:first-child) {display: none;}
   ul.topnav li.icon {
@@ -364,6 +408,8 @@ ul.topnav li.icon {display: none;}
     display: inline-block;
   }
 }
+
+
 
 @media screen and (max-width:800px) {
   ul.topnav.responsive {position: relative;}
@@ -433,10 +479,9 @@ ul.topnav li.icon {display: none;}
 
 .interview-btn {  
  
-  background-color: rgba(255,255,255,0.5) ;
+  background-color: rgba(255,255,255,1) ;
   display: inline-block;
   font-color: #ffffff;
-  
   margin-top:0.3em;
 }
 
@@ -451,8 +496,6 @@ ul.topnav li.icon {display: none;}
 	margin-top: 30px;
     
 }
-
-
 
 
 
@@ -471,6 +514,22 @@ ul.topnav li.icon {display: none;}
 }
 
 
+.playlist_container h2{
+	line-height: 1.3em;
+	font-weight: 600;
+	margin-top: 6px;
+	letter-spacing: 0px;
+	
+}
+
+.playlist_container span {
+		display: block;	
+		font-weight: normal;
+
+}
+
+
+
 
 .playlist {
    
@@ -487,10 +546,6 @@ ul.topnav li.icon {display: none;}
 
 }
 
-.video-title {
-	line-height: 16px;
-	
-}
 
 
 .video-excerpt {
@@ -604,6 +659,7 @@ ul.topnav li.icon {display: none;}
 
 .footer{
 	background-color:#e12227;
+	width: 100%;
 	
 }
 
@@ -614,14 +670,17 @@ ul.topnav li.icon {display: none;}
 	color:#ffffff;
 	
 	display: inline-block;
-	font-weight: 600;
+	
 
 } 
 
 .footer img {
 	display: inline;
 	margin-right: 15px;
-	
 	margin-bottom: 5px;
 }
 
+.follow {
+	display:inline-block;
+	float:right;
+}
